tests/baselines/reference/internalAliasUninitializedModule.errors.txt
internalAliasUninitializedModule.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
internalAliasUninitializedModule.ts(2,19): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
internalAliasUninitializedModule.ts(9,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== internalAliasUninitializedModule.ts (3 errors) ====
    module a {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export module b {
                      ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
            export interface I {
                foo();
            }
        }
    }
    
    module c {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        import b = a.b;
        export var x: b.I;
        x.foo();
    }